test/sema/multifile-error.delta.output
inputs/multifile-error/b.delta:1:9: error: unknown identifier 'foo'
var b = foo;
        ^
